--- a/config_example_2_all_entities.json
+++ b/config_example_2_all_entities.json
@@ -1,8 +1,8 @@
 {
-  "game_install_dir":"some path here/Steam/steamapps/common/7 Days To Die",
-  "game_saves_dir":"some path here/7DaysToDie/Saves",
+  "game_install_dir":"some_path_here/Steam/steamapps/common/7 Days To Die",
+  "game_saves_dir":"some_path_here/7DaysToDie/Saves",
   "use_save_game":"",
-  "game_version":"a19_0",
+  "game_version":"a19_1",
   "modlet_tag":"all-entities",
   "log_level":"2",
   "config_file_format":"v1",
@@ -65,19 +65,19 @@
     "MoveSpeed": {
       "rand_function":"setcreate_one_range",
       "low":"0.05",
-      "high":"1.30"
+      "high":"1.10"
     },
     "MoveSpeedPanic":{
       "rand_function":"setcreate_one_range",
-      "low":"0.05",
-      "high":"1.50"
+      "low":"0.40",
+      "high":"1.30"
     },
     "MoveSpeedAggro": {
       "rand_function":"setcreate_two_range",
       "low1":"0.4",
       "low2":"1.0",
       "high1":"1.1",
-      "high2":"2.2"
+      "high2":"1.5"
     },
     "AttackTimeoutDay": {
       "rand_function":"setcreate_one_range",
