--- a/config_example_2_all_entities.json
+++ b/config_example_2_all_entities.json
@@ -1,8 +1,8 @@
 {
-  "game_install_dir":"/home/toot/.local/share/Steam/steamapps/common/7 Days To Die",
-  "game_saves_dir":"/home/toot/.local/share/7DaysToDie/Saves",
+  "game_install_dir":"some path here/Steam/steamapps/common/7 Days To Die",
+  "game_saves_dir":"some path here/7DaysToDie/Saves",
   "use_save_game":"",
-  "game_version":"a19.2_b3",
+  "game_version":"a19.2_b4",
   "modlet_tag":"all-entities",
   "log_level":"2",
   "config_file_format":"v1",
