--- a/config_example_2_all_entities.json
+++ b/config_example_2_all_entities.json
@@ -1,14 +1,40 @@
 {
-  "game_install_dir":"some path here/Steam/steamapps/common/7 Days To Die",
-  "game_saves_dir":"some path here/7DaysToDie/Saves",
+  "game_install_dir":"/home/toot/.local/share/Steam/steamapps/common/7 Days To Die",
+  "game_saves_dir":"/home/toot/.local/share/7DaysToDie/Saves",
   "use_save_game":"",
   "game_version":"a19.2_b4",
-  "modlet_tag":"all-entities",
+  "author":"Doughphunghus",
+  "modlet_tag":"all-entities-localized",
   "log_level":"2",
   "config_file_format":"v1",
   "unique_entity_prefix":"DoughsR",
   "ignore_entity_list":{},
+  "enable_localization":"1",
   "ConfigDefaults": {
+    "LocalizationNameLookup": {
+      "animals": {
+        "animalDoe":"1",
+        "animalBear":"1",
+        "animalBoar":"1",
+        "animalChicken":"1",
+        "animalDeer":"1",
+        "animalDoe":"1",
+        "animalPig":"1",
+        "animalRabbit":"1",
+        "animalStag":"1",
+        "animalZombieDog":"1",
+        "animalZombieVulture":"1"
+      },
+      "friendly" : {
+        "animalDoe":"1",
+        "animalChicken":"1",
+        "animalDeer":"1",
+        "animalDoe":"1",
+        "animalPig":"1",
+        "animalRabbit":"1",
+        "animalStag":"1"
+      }
+    },
     "WalkType": {
       "rand_function":"custom_WalkType"
     },
@@ -168,7 +194,7 @@
   },
   "ConfigEntityEnemyAnimal": {
     "disable_randomizer":"0",
-    "num_generation_loops":"5",
+    "num_generation_loops":"7",
     "ignore_entity_list":{},
     "MassAndWeightAndSizeScale": {
       "low_pct_int":"15",
@@ -200,7 +226,7 @@
   },
   "ConfigEntityFriendlyAnimal": {
     "disable_randomizer":"0",
-    "num_generation_loops":"5",
+    "num_generation_loops":"7",
     "ignore_entity_list": {},
     "MassAndWeightAndSizeScale": {
       "low_pct_int":"15",
@@ -223,7 +249,8 @@
   },
   "ConfigEntityZombie": {
     "disable_randomizer":"0",
-    "num_generation_loops":"5",
+    "num_generation_loops":"7",
+    "enable_walktype_crawler_limit":"2",
     "ignore_entity_list":{
       "animalRabbit2":"Example how to not randomize an entity named animalRabbit2",
       "animalDoe2":"Example how to not randomize an entity named animalDoe2"
