--- a/config_example_1_zombies_only.json
+++ b/config_example_1_zombies_only.json
@@ -2,9 +2,10 @@
   "game_install_dir":"some path here/Steam/steamapps/common/7 Days To Die",
   "game_saves_dir":"some path here/7DaysToDie/Saves",
   "use_save_game":"",
-  "game_version":"a19_0",
+  "game_version":"a19.2-b4",
   "author":"Doughphunghus",
-  "modlet_tag":"test_example",
+  "modlet_name_prefix":"Doughs-RandEnts",
+  "modlet_name_tag":"test_example",
   "log_level":"2",
   "config_file_format":"v1",
   "unique_entity_prefix":"DoughsR",
@@ -13,6 +14,7 @@
     "animalDoe2":"Example how to not clone or make new copies an entity named animalDoe2",
     "guppyRobotDog":"Follower animal"
   },
+  "only_allow_these_entities_list":{},
   "enable_localization":"1",
   "ConfigDefaults": {
     "LocalizationNameLookup": {
