Added pre-generated 492 clones as the 4092 clones one amy not work on servers

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 config_example_TEST_all_entities.json
 config_DOUGHS_DFGAME_all_entities.json
+config_example_2_all_entities_400max.json
 NameFiles/
 test.log
