--- a/config_example_2_all_entities.json
+++ b/config_example_2_all_entities.json
@@ -2,10 +2,10 @@
   "game_install_dir":"/home/toot/.local/share/Steam/steamapps/common/7 Days To Die",
   "game_saves_dir":"/home/toot/.local/share/7DaysToDie/Saves",
   "use_save_game":"",
-  "game_version":"a19.3-b6",
+  "game_version":"a19.5.b50",
   "author":"Doughphunghus",
   "modlet_name_prefix":"Doughs-RandEnts",
-  "modlet_name_tag":"vanilla-vanilla-zeds-only-4920-clones",
+  "modlet_name_tag":"vanilla-zeds-only-4920-clones",
   "log_level":"2",
   "config_file_format":"v1",
   "unique_entity_prefix":"DoughsR",
@@ -92,7 +92,7 @@
     },
     "MoveSpeed": {
       "rand_function":"setcreate_one_range",
-      "low":"0.05",
+      "low":"0.5",
       "high":"1.10"
     },
     "MoveSpeedPanic":{
@@ -119,7 +119,7 @@
     },
     "DismemberMultiplierHead": {
       "rand_function":"setcreate_one_range",
-      "low":"0.6",
+      "low":"0.3",
       "high":"1.1"
     },
     "DismemberMultiplierArms": {
@@ -129,8 +129,8 @@
     },
     "DismemberMultiplierLegs": {
       "rand_function":"setcreate_one_range",
-      "low":"0.6",
-      "high":"1.1"
+      "low":"0.1",
+      "high":".6"
     },
     "KnockdownProneDamageThreshold": {
       "rand_function":"setcreate_one_range",
@@ -180,7 +180,7 @@
     },
     "SightRange": {
       "rand_function":"setcreate_rand_around_percent",
-      "pct_random_int":"20",
+      "pct_random_int":"25",
       "default":"30"
     },
     "SmellAlertThreshold": {
@@ -363,7 +363,10 @@
     "MassAndWeightAndSizeScale": {},
     "HealthAndExperienceGain": {},
     "LegCrawlerThreshold": {},
-    "MoveSpeed": {},
+    "MoveSpeed": {
+      "low":"0.04",
+      "high":"1.0"
+    },
     "MoveSpeedAggro": {},
     "TintMaterial": {},
     "AttackTimeoutDay": {},
